[package]
name = "filterkontrolle"
version = "0.1.0"
authors = ["Mark Beck <>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "filterkontrolle"
test = false
bench = false

[dependencies]
#panic-halt = "0.2.0"
ufmt = "0.1.0"
avr-device = "*"
nb = "1.0.0"
embedded-hal = "0.2.6"
chrono = {version = "0.4.19", default-features = false}


[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "ac72adbe6db8900c41681b759ff62a11f2915916"
features = ["arduino-nano"]

[dependencies.avr-hal-generic]
git = "https://github.com/rahix/avr-hal"
rev = "ac72adbe6db8900c41681b759ff62a11f2915916"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
